--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,6 @@ remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
-header:
-  image: /docs/Thumbnail-image.jpg
+kramdown:
+  syntax_highlighter_opts:
+    disable : true
